# powerdns-migrator

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  changes.diff  docker-compose.yml  mypy.ini  pyproject.toml  test-docker.sh
.github/workflows/: ci.yml
docker/mysql/: .gitignore  init.sql  init_pdns1.sql  init_pdns2.sql
docker/pdns/: Dockerfile  entrypoint.sh
docker/webui/: Dockerfile  app.py  index.html  requirements.txt
docker/zones/: .gitignore  zone-generator.sh  zone1.test.zone  zone2.test.zone  zone3.test.zone
examples/bash/: run.sh  zones.txt
examples/mysql/: migrate.py  requirements.txt
examples/rabbitmq/: consumer.py  publish.py  rabbitmq.py  requirements.txt
examples/rabbitmq/extra/: publish-exchange.py
powerdns_migrator/: __init__.py  async_client.py  async_migrator.py  cli.py  config.py  errors.py  utils.py
